--- a/package.json
+++ b/package.json
@@ -8,18 +8,33 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
+  "resolutions": {
+    "@types/react": "^18.0.8"
+  },
   "dependencies": {
-    "@types/node": "18.15.11",
+    "@prisma/client": "^4.13.0",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/node": "^18.15.12",
+    "prisma": "^4.13.0",
+    "prisma-dbml-generator": "^0.10.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
