--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL="postgresql://law_connect:law_connect@localhost:5432/law_connect"
+NEXTAUTH_SECRET="super_secret_secret"
+NEXTAUTH_URL="http://localhost:3000"
