--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react": "^18.0.8"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.10",
     "@prisma/client": "^4.14.1",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
