chore: setting up deployment

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@types/react": "^18.0.8"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.10",
+    "@ant-design/icons": "^5.1.4",
     "@prisma/client": "^4.14.1",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.30.0",
@@ -27,6 +28,7 @@
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "postcss": "8.4.22",
+    "rc-util": "^5.33.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1"
