--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@prisma/client": "^4.14.1",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "antd": "^5.6.1",
@@ -29,8 +30,8 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.22",
     "rc-util": "^5.33.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
